# Transformer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  changes.txt  desc.xmind
include/: Interface.h  Transformer.h
res/: transgui.ui
src/: Interface.cpp  Transformer.cpp  main.cpp
